MSP-5186 Implement AppGroup CRUD endpoints
